# fuchsia

apps/server/: .env.example  .gitignore  pyproject.toml  requirements.txt
apps/server/alembic/versions/: 0006_user_preferences.py  0007_drop_user_currency.py  3ce69cf090dd_add_cloth_outfit_and_wardrobe_tables.py  46139ad10209_add_unique_constraint_to_calendar_outfit.py  6274d3b2f48a_add_image_url_to_outfits.py  6885634e8098_remove_outfit_image_url.py  96f5a077648e_add_push_notification_fields.py  a1b2c3d4e5f6_add_memories_table.py  b2c3d4e5f6a7_add_memory_embedding.py  c3d4e5f6a7b8_add_agent_invocations_table.py  d4b660ff9871_add_image_url_to_wardrobes.py  d5e6f7a8b9c0_add_style_tips_table.py  d63f860f2238_add_notification_toggles.py  dde67129cdfa_add_outfit_images_table.py  e5c7811ff083_remove_wardrobe_quantity.py
apps/server/app/: __init__.py  main.py
apps/server/app/core/: categories.py  config.py
apps/server/app/db/: session.py
apps/server/app/models/: user.py  (+12 more)
apps/server/scripts/: backfill_memory_embeddings.py
apps/server/tests/: test_agent_calendar.py  test_agent_loop.py  test_agent_memory.py  test_agent_openai_compat.py  test_agent_outfits.py  test_agent_prompt.py  test_agent_recall.py  test_agent_tools.py  test_auth_endpoints.py  test_chat_endpoints.py  test_clothing_item_analyze.py  test_config.py  test_database.py  test_embeddings.py  test_memory_endpoints.py  test_openai_compat_stream.py  test_streaming_endpoint.py  test_streaming_service.py  test_style_tips_endpoint.py  test_style_tips_service.py  test_weather_service.py  test_web_search_service.py
(+77 files in other folders)
